added assign to js_assig_7

--- a/js-assignment-master/assignment_15_25_apr_19/ass1.html
+++ b/js-assignment-master/assignment_15_25_apr_19/ass1.html
@@ -10,7 +10,7 @@
     <input type="submit" name="" onclick="randomNum()">
     <script type="text/javascript">
         function randomNum() {
-            var rand = Math.floor(Math.random() * 1; 0) % 10
+            var rand = Math.floor(Math.random() * 10) % 10
             var guess = document.getElementById("ran");
             alert(rand);
             if (rand == guess) {
