Changed in Assig_4

--- a/js-assignment-master/js_assig7/ass_4.html
+++ b/js-assignment-master/js_assig7/ass_4.html
@@ -11,9 +11,9 @@
 			}
 		</style>
 	</head>
-	<body class="bg-dark">
-		<div class="container-fluid bg-light mx-auto" style="width: 35%; border-radius: 10px;">
-			<img class="img img-fluid" id="moveIt" src="ball.png" alt="No Image!" style="transition: 3s all ease;">
+	<body class="">
+		<div class="container-fluid bg-success mx-auto" style="width: 35%; border-radius: 10px;">
+			<img class="img img-fluid bg-success" id="moveIt" src="ball.png" alt="No Image!" style="transition: 3s all ease;">
 			<button class="btn btn-success" onclick="imageMove('moveIt');" style="width: 100%; padding-top: 15px; padding-bottom: 15px;">Do IT</button>
 		</div>
 		<script type="text/javascript">
