2nd May TypeScript Assignmet

--- a/js-assignment-master/Jquery and JS assign 30th april/ass_1_jquery_down.html
+++ b/js-assignment-master/Jquery and JS assign 30th april/ass_1_jquery_down.html
@@ -13,9 +13,10 @@
   <span>This is a span</span>
 <br>
   <span>This is a span</span>
-  <button type="button" id="bt1" name="button"></button>
+  <br>
+  <button type="button" id="bt1" name="button">Remove Span </button>
   <script type="text/javascript">
-$("bt1").click(()=>{
+$("#bt1").click(()=>{
 $("span").remove();
 
 
